<resources>
    <string name="title_activity_main">米米医疗</string>
    <string name="publish_weibo">发布微博</string>
    <string name="ram_only_one_account_allow_title">仅允许创建一个人人账户</string>
    <string name="ram_only_one_account_allow_msg">已经存在一个人人账户</string>
    <string name="ram_auth_error_dialog_title">错误</string>
    <string name="ram_auth_error_dialog_message">网络连接错误，是否重试？</string>
    <string name="ram_prepare_auth_page">正在准备授权...</string>
    <string name="login_register_url">http://42.121.237.116/medical/index.php</string>
    <string name="permlab_downloadManagerAdvanced">Advanced download manager functions.</string>
    <string name="permdesc_downloadManagerAdvanced">"Allows the application to access the download manager's advanced functions. Malicious applications can use this to disrupt downloads and access private information."</string>
    <string name="permlab_downloadCompletedIntent">Send download notifications.</string>
    <string name="permdesc_downloadCompletedIntent">Allows the application to send notifications about completed downloads. Malicious applications can use this to confuse other applications that download files.</string>
    <string name="permlab_downloadCacheNonPurgeable">Reserve space in the download cache</string>
    <string name="permdesc_downloadCacheNonPurgeable">Allows the application to download files to the download cache which cannot be automatically deleted when the download manager needs more space.</string>
    <string name="permlab_accessAllDownloads">Access all system downloads</string>
    <string name="permdesc_accessAllDownloads">Allows the application to view and modify all initiated by any application on the system.</string>
    <string name="download_unknown_title">&lt;Untitled></string>
    <string name="notification_filename_separator">", "</string>
    <string name="notification_filename_extras">" and %d more"</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="notification_need_wifi_for_size">Download size requires Wi-Fi</string>
    <string name="wifi_required_title">Download too large for operator network</string>
    <string name="wifi_required_body" formatted="false">"You must use WiFi to complete this %s download. 

Click %s to begin this download the next time you are connected to a WiFi network."</string>
    <string name="wifi_recommended_title">Queue for download later?</string>
    <string name="wifi_recommended_body" formatted="false">"Starting this %s download now may shorten your battery life and/or result in excessive usage of your mobile data connection, which can lead to charges by your mobile operator depending on your data plan.

 Click %s below to begin this download the next time you are connected to a WiFi network."</string>
    <string name="button_queue_for_wifi">Queue</string>
    <string name="button_cancel_download">Cancel</string>
    <string name="button_start_now">Start now</string>
    <string name="download_title">Downloads</string>
    <string name="no_downloads">No downloads.</string>
    <string name="missing_title">&lt;Unknown></string>
    <string name="download_menu_sort_by_size">Sort by size</string>
    <string name="download_menu_sort_by_date">Sort by time</string>
    <string name="download_queued">Queued</string>
    <string name="download_running">In progress</string>
    <string name="download_paused">Paused</string>
    <string name="download_success">Complete</string>
    <string name="download_error">Failed</string>
    <string name="dialog_title_not_available">Download Failed</string>
    <string name="dialog_failed_body">Do you want to retry downloading the file later or delete it from the queue?</string>
    <string name="dialog_running_body">Do you want to pause downloading the file or cancel it from the queue?</string>
    <string name="dialog_paused_body">Do you want to resume downloading the file or delete it from the queue?</string>
    <string name="dialog_title_queued_body">File not yet available</string>
    <string name="dialog_queued_body">This file is queued for future download.</string>
    <string name="dialog_file_missing_body">The downloaded file cannot be found.</string>
    <string name="dialog_insufficient_space_on_external">Cannot finish download. There is not enough space on external storage.</string>
    <string name="dialog_insufficient_space_on_cache">Cannot finish download. There is not enough space on internal download storage.</string>
    <string name="dialog_cannot_resume">Download interrupted. It cannot be resumed.</string>
    <string name="dialog_file_already_exists">annot download. The destination file already exists.</string>
    <string name="dialog_media_not_found">annot download. The external media is not available.</string>
    <string name="download_no_application_title">Cannot open file</string>
    <string name="remove_download">Remove</string>
    <string name="delete_download">Delete</string>
    <string name="pause_download">Pause</string>
    <string name="resume_download">Resume</string>
    <string name="keep_queued_download">Keep</string>
    <string name="cancel_running_download">Cancel</string>
    <string name="retry_download">Retry</string>
    <string name="deselect_all">Clear selection</string>
    <string name="app_name">米米医疗</string>
    <string name="from">9100203</string>
    <string name="pubdate">20120727</string>
    <string name="softid">100001</string>
    <string name="version">5.1.3</string>
    <string name="apikey">39c4cb63f0f2401abe116d5770bf83b8</string>
    <string name="secretkey">1f736f38e254488787643cfffe93b1a2</string>
    <string name="appid">185047</string>
    <string name="subproperty">0</string>
    <string name="permission_account_dis">同步人人网帐号密码</string>
    <string name="search_label">搜索好友</string>
    <string name="search_hint">请输入好友姓名</string>
    <string name="search_invoke">应用/搜索/调用 搜索</string>
    <string name="widget_name">人人 for Android</string>
    <string name="help">"1.通过侧栏进行全局导航。

 2.添加人人Android小部件，可以在手机桌面直接查看好友新鲜事、发状态、传照片和报到。

 3.在新鲜事首页和个人主页，可以从顶部操作栏进行分类查看。

 4.新鲜事页面和评论页面可以点击顶部操作栏空白处，快速返回顶部。

 5.新鲜事页面和评论页面可以下拉刷新页面内容。

 6.消息提醒、缓存清理、亮度调节等设置，可以在选项中进行。

"</string>
    <string name="share_blog_view_source">查看原文</string>
    <string name="share_blog_view_source_owner">查看源作者</string>
    <string name="action_log_out">com.renren.mobile.android.action.ACTION_LOG_OUT</string>
    <string name="action_log_in">com.renren.mobile.android.action.ACTION_LOG_IN</string>
    <string name="eula_title">免责声明</string>
    <string name="eula_message">您将要开始的应用是由人人网开发、拥有、运营的联网应用。摩托罗拉不承担该应用任何方面的任何责任，包括但不限于其性能、知识产权、支持、服务、内容及收费。该应用在使用过程中可能产生数据流量，该费用请参看移动运营商公布的收费标准。本服务的联网查询目前只面向已开通移动互联网服务的用户。</string>
    <string name="eula_refuse">拒绝</string>
    <string name="eula_accept">同意</string>
    <string name="share_via_renren">分享到人人</string>
    <string name="rapidpub_update_success">更新成功</string>
    <string name="loading">加载中...</string>
    <string name="net_connect_fails">无法连接网络，请检查您的手机网络设置</string>
    <string name="preference_notification_syncinfo">通讯录提醒</string>
    <string name="preference_notification_syncinfo_summary">登录显示更新通讯录提醒</string>
    <string name="contact_yes">确定</string>
    <string name="contact_no">取消</string>
    <string name="contact_next">下一步</string>
    <string name="contact_finish">完成</string>
    <string name="contact_suretodele">取消同步</string>
    <string name="contact_update_title">同步提醒</string>
    <string name="contact_update_message">通讯录没有头像？好友不够多？快来同步好友信息吧，为他们添加头像和主页地址</string>
    <string name="contact_updated_message">您的联系人在人人网有更新啦！快来同步好友信息吧，为他们添加头像和主页地址</string>
    <string name="contact_action_head">好友</string>
    <string name="find_by_contacts">通讯录找好友</string>
    <string name="find_by_website">找同学找同事</string>
    <string name="contact_no_response">服务器没有响应，请稍候重试</string>
    <string name="contact_recommend">帮您找到了还未在人人网中结识的好友，赶快加为好友吧，让你们变的更熟悉！</string>
    <string name="search_firend">找人</string>
    <string name="search_btn">搜索</string>
    <string name="contact_search_hint">姓名 帐号 人人ID 学校 公司</string>
    <string name="search_result">搜索结果</string>
    <string name="search_key_empty">请输入搜索内容</string>
    <string name="search_my_id">我的人人ID：%d</string>
    <string name="contact_getfiends_title">帮您找到手机通讯录中的人人网好友</string>
    <string name="contact_may_know">可能认识的人</string>
    <string name="contact_getfriends_addtional">使用此功能人人网不会对您原有的通讯录信息做任何修改，并将对您的隐私信息进行严格保密</string>
    <string name="contact_access_contacts">为了方便您找到更多人人网好友，需要上传您的通讯录（会以加密方式上传和保存）</string>
    <string name="contact_getfriends_title">帮您找到了还未在人人网上结识的好友，赶快加为好友吧，让你们变的更熟悉！</string>
    <string name="contact_getfriends_empty">查找完成，本次操作未找到您的好友，去同步好友信息试试吧</string>
    <string name="contact_getfriends_mainsite_empty">抱歉，没有为您找到相关的人名或内容</string>
    <string name="contact_getfriends_addfriend_btn">加为好友</string>
    <string name="contact_getfriends_chat">私信</string>
    <string name="contact_sharedfriends_count">%d个共同好友</string>
    <string name="contact_getfriends_addall_tip">是否确认向所有人发送好友请求？</string>
    <string name="contact_getfriends_invited">请求已发送</string>
    <string name="contact_getfriends_invite_successfully">请求发送成功</string>
    <string name="contact_getfriends_fail_try">请求失败，请重试一次</string>
    <string name="contact_getfriends_invite_failed">请求发送失败</string>
    <string name="contact_add_all_friends">全部加为好友</string>
    <string name="contact_syncinfo_head">同步好友信息</string>
    <string name="contact_syncinfo_title">"将人人网上的好友头像与
主页地址同步到您的通讯录"</string>
    <string name="synccontact_highqualityphoto">使用人人网高清头像同步</string>
    <string name="synccontact_hqphoto_tip">使用高清头像同步，每张头像约会使用0.02MB的流量，建议在WIFI或3G环境下使用</string>
    <string name="synccontact_term_title">同步提醒</string>
    <string name="synccontact_term">同步好友信息会备份您的通讯录信息（会以加密方式上传和保存），同时同步好友头像和个人主页地址到您的通讯录</string>
    <string name="synccontact_cancel_tip">取消同步会中断所有正在进行的同步操作，但不会影响已经同步成功的信息。是否确认取消？</string>
    <string name="synccontact_sync_cancel">同步取消</string>
    <string name="synccontact_synchronizing">正在同步%d</string>
    <string name="synccontact_synchronize">正在同步...</string>
    <string name="synccontact_sync_finish">同步完成</string>
    <string name="synccontact_download_photo">正在更新通讯录头像</string>
    <string name="synccontact_download_photo_success">已经完成通讯录头像更新</string>
    <string name="synccontact_update_photo">正在更新通讯录头像%s</string>
    <string name="synccontact_delete_btn">删除同步信息</string>
    <string name="synccontact_delete_rusure">删除提醒</string>
    <string name="synccontact_delete_info">删除同步信息将会删除同步过的人人头像和个人主页地址</string>
    <string name="synccontact_delete">正在删除</string>
    <string name="synccontact_deleting">正在删除%d</string>
    <string name="synccontact_delete_finish">删除完成</string>
    <string name="synccontact_percent_sign">%</string>
    <string name="contact_syncinfo_empty">没有为您匹配到联系人信息，请按下一步继续吧</string>
    <string name="contact_syncinfo_nonext">同步已完成，本次操作没有为您匹配到联系人，我们将及时根据您好友信息的更新来提醒您同步，敬请关注</string>
    <string name="contact_syncinfo_import_title">帮您找到了可以导入到手机通讯录的好友，快把他们添加到通讯录吧！</string>
    <string name="contact_syncinfo_import_empty">没有可以导入的好友了，请按下一步继续吧</string>
    <string name="contact_syncinfo_selectall">选择全部</string>
    <string name="contact_syncinfo_canclall">取消全部</string>
    <string name="email">邮箱：请输入您的邮箱地址</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="v5_0_1_guide_register">注册</string>
    <string name="v5_0_1_guide_agree_use_contacts">同意使用您的通讯录</string>
    <string name="v5_0_1_guide_register_phone_account_hint">帐号：用户名/手机号/邮箱</string>
    <string name="v5_0_1_guide_register_phone_password_hint">密码：请输入6-20位字符</string>
    <string name="password_rewrite">确认密码：再次输入密码</string>
    <string name="username">用户名/手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>