<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="8.0dip" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/v5_0_1_flipper_head_blue_background"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_register_back"
            android:layout_width="50dip"
            android:layout_height="50dp"
            android:background="@drawable/selector_top"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/image_view_register_back"
                android:layout_width="28dip"
                android:layout_height="28dp"
                android:layout_centerInParent="true"
                android:src="@drawable/v5_0_1_flipper_head_back" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/image_view_separator"
            android:layout_width="2.0px"
            android:layout_height="24.0dip"
            android:layout_toRightOf="@+id/layout_register_back"
            android:background="@drawable/v5_0_1_flipper_head_separator" />

        <RelativeLayout
            android:layout_width="50dip"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/image_view_separator" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#ffffffff"
                android:textSize="@dimen/flipper_head_text_size" />
        </RelativeLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/v5_0_1_edittext_bg"
        android:enabled="true"
        android:hint="@string/v5_0_1_guide_register_phone_account_hint"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingLeft="8.0dip"
        android:singleLine="true"
        android:textColorHint="@color/activity_from"
        android:textSize="14.0sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/v5_0_1_edittext_bg"
        android:enabled="true"
        android:hint="@string/v5_0_1_guide_register_phone_password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="8.0dip"
        android:password="true"
        android:textColorHint="@color/activity_from"
        android:textSize="14.0sp" />

    <EditText
        android:id="@+id/edit_re_password"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/v5_0_1_edittext_bg"
        android:enabled="true"
        android:hint="@string/password_rewrite"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="8.0dip"
        android:password="true"
        android:textColorHint="@color/activity_from"
        android:textSize="14.0sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/v5_0_1_edittext_bg"
        android:enabled="true"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="8.0dip"
        android:password="true"
        android:textColorHint="@color/activity_from"
        android:textSize="14.0sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/v5_0_1_button_background"
        android:text="@string/v5_0_1_guide_register"
        android:textColor="@color/white"
        android:textSize="18.0sp" />

    <LinearLayout
        android:id="@+id/layout_phone_register_is_agree"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginTop="12.0dip"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/phone_check_checkbox"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginRight="8.0dip"
            android:button="@drawable/v5_0_1_check_box"
            android:checked="true" />

        <TextView
            android:id="@+id/phone_check_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/v5_0_1_guide_agree_use_contacts"
            android:textColor="#ff333333"
            android:textSize="14.0sp" />
    </LinearLayout>

</LinearLayout>